istio-advanced-rules/istio-networking-springboot/destination-rule-zuul.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway
spec:
  host: gateway
  subsets:
    - labels:
        version: v1
      name: v1
