istio-advanced-rules/istio-networking-springboot/virtual-service-recommendation-v1-fault-injection-503.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 50 # 100 means 100%
      route:
        - destination:
            host: recommendation
            port:
              number: 8080
            subset: version-v1
    - route:
        - destination:
            host: recommendation
            port:
              number: 8080
            subset: version-v1
