istio-advanced-rules/istio-networking-springboot/virtual-service-recommendation-v1-fault-injection-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
    - fault:
        delay:
          fixedDelay: 7.000s
          percent: 50
      route:
        - destination:
            host: recommendation
            port:
              number: 8080
            subset: version-v1
    - route:
        - destination:
            host: recommendation
            port:
              number: 8080
            subset: version-v1
