istio-advanced-rules/istio-networking-springboot/virtual-service-recommendation-v1-fault-injection-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
    - fault:
        delay:
          fixedDelay: 7.000s
          percent: 5
      route:
        - destination:
            host: recommendation
            subset: version-v1
