istio-advanced-rules/istio-networking-springboot/virtual-service-recommendation-v1-v2-90-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        port:
          number: 8080
        subset: version-v1
      weight: 90
    - destination:
        host: recommendation
        port:
          number: 8080
        subset: version-v2
      weight: 10
