istio-advanced-rules/istio-networking-springboot/virtual-service-recommendation-v2-header-ab-test.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
    - match:
        - headers:
            baggage-is-ab-test:
              exact: "true"
      route:
        - destination:
            host: recommendation
            port:
              number: 8080
            subset: version-v2
    - route:
        - destination:
            host: recommendation
            port:
              number: 8080
            subset: version-v1
